<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LogInActivity">

    <TextView
        android:id="@+id/get_otp_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="56dp"
        android:gravity="top"
        android:text="@string/get_otp"
        android:textAppearance="@style/get_otp" />

    <ImageView
        android:id="@+id/edit_icon_imageView"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="59dp"
        android:layout_toRightOf="@id/get_otp_textView"
        android:gravity="top"
        android:src="@drawable/ic_baseline_edit_24"
        android:text="@string/get_otp"
        android:visibility="gone"
        android:textAppearance="@style/get_otp" />


    <TextView
        android:id="@+id/phone_textView"
        android:layout_width="210dp"
        android:layout_height="72dp"
        android:layout_below="@id/get_otp_textView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:text="@string/enter_your_"
        android:textAppearance="@style/enter_your_"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/parent_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_textView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/phone_number_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_1"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_number_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/phone_number_prefix"
            android:background="@drawable/rectangle_1"
            android:hint="Enter the number"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/phone_number_editText"
            android:background="@drawable/rectangle_1"
            android:hint="Type otp"
            android:paddingLeft="12dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/continue_button"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_below="@id/parent_relative_layout"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/yellow_background"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/continues"
        android:textAppearance="@style/continues"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parent_relative_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/continue_button"
        android:gravity="center"
        android:text="@string/some_id"
        android:visibility="gone"
        android:textAppearance="@style/some_id" />
</RelativeLayout>

