<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal|top"
            android:text="@string/notes"
            android:textAppearance="@style/notes" />

        <TextView
            android:id="@+id/personal_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="personel me" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/photo_1" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/interested_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/interested_"
                    android:textAppearance="@style/interested_" />

                <TextView
                    android:id="@+id/premium_mem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/interested_"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_toStartOf="@id/continues"
                    android:layout_toLeftOf="@id/continues"
                    android:text="@string/premium_mem"
                    android:textAppearance="@style/premium_mem" />


                <TextView
                    android:id="@+id/continues"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/yellow_background"
                    android:gravity="center"
                    android:text="upgrade"
                    android:textAppearance="@style/continues"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/photo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/photo_2" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/photo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/photo_3" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
